comprobando fase 1
